--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@react-aria/ssr": "3.9.4",
     "@react-aria/visually-hidden": "3.8.12",
     "@tanstack/react-query": "^5.59.0",
+    "@types/dompurify": "^3.0.5",
     "axios": "^1.7.7",
     "clsx": "2.1.1",
+    "dompurify": "^3.1.7",
     "framer-motion": "~11.1.1",
     "intl-messageformat": "^10.5.0",
     "jwt-decode": "^4.0.0",
@@ -43,6 +45,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "sonner": "^1.5.0",
     "zod": "^3.23.8"
   },
