--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "@nextui-org/kbd": "2.0.34",
     "@nextui-org/link": "2.0.35",
     "@nextui-org/listbox": "2.1.27",
+    "@nextui-org/modal": "^2.0.41",
     "@nextui-org/navbar": "2.0.37",
+    "@nextui-org/pagination": "^2.0.36",
     "@nextui-org/select": "^2.2.7",
     "@nextui-org/skeleton": "^2.0.32",
     "@nextui-org/snippet": "2.0.43",
     "@nextui-org/spacer": "^2.0.33",
     "@nextui-org/switch": "2.0.34",
     "@nextui-org/system": "2.2.6",
+    "@nextui-org/table": "^2.0.40",
+    "@nextui-org/tabs": "^2.0.37",
     "@nextui-org/theme": "2.2.11",
     "@nextui-org/tooltip": "^2.0.41",
     "@react-aria/ssr": "3.9.4",
