edit elete comment

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nextui-org/modal": "^2.0.41",
     "@nextui-org/navbar": "2.0.37",
     "@nextui-org/pagination": "^2.0.36",
+    "@nextui-org/popover": "^2.1.29",
     "@nextui-org/select": "^2.2.7",
     "@nextui-org/skeleton": "^2.0.32",
     "@nextui-org/snippet": "2.0.43",
@@ -39,6 +40,7 @@
     "@types/dompurify": "^3.0.5",
     "axios": "^1.7.7",
     "clsx": "2.1.1",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.1.7",
     "framer-motion": "~11.1.1",
     "intl-messageformat": "^10.5.0",
