--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nextui-org/tooltip": "^2.0.41",
     "@react-aria/ssr": "3.9.4",
     "@react-aria/visually-hidden": "3.8.12",
+    "@react-pdf/renderer": "^4.0.0",
     "@tanstack/react-query": "^5.59.0",
     "@types/dompurify": "^3.0.5",
     "axios": "^1.7.7",
