--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "20.5.7",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
